{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Gameplay",
            "id": "f299f2de-9161-4d23-bbdb-a3e5a3d177f0",
            "actions": [
                {
                    "name": "PrimaryContact",
                    "type": "Button",
                    "id": "0d6ccbaf-22d9-4fc8-aba6-36eccfd15333",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PrimaryPosition",
                    "type": "Value",
                    "id": "020a27cd-661a-4afe-ae93-8acdedb02fbe",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d8c236a8-a961-498a-8575-18609ef90d51",
                    "path": "<Pointer>/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryContact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "52d495e6-6d26-4b9f-a61a-09804cd6f125",
                    "path": "<Pointer>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}